# nekosys

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  icons.rc
crates/config-neko/: Cargo.toml
crates/config-neko/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/nyannel/: Cargo.toml
crates/nyannel/src/: lib.rs
crates/servx/: Cargo.toml  index.html
crates/servx/public/: main.css
crates/servx/src/: lib.rs
crates/voice-recognizer/: Cargo.toml
crates/voice-recognizer/src/: commands.rs  lib.rs
modules/: index.toml
modules/example/: module.index.toml
modules/nyanner-rs/: module.index.toml
src/: main.rs
src/components/: cli.rs  mod.rs  module_loader.rs  startup_anim.rs  tray.rs
src/utils/: config.rs  mod.rs  snips.rs
