[package]
name = "NekoSys"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]
members = [
    "crates/logger",
    "crates/nyannel",
    "crates/nyioxus",
    "crates/servx",
    "crates/voice-recognizer",
    "crates/nyannel",
]

[workspace.dependencies]
log = { version = "0.4.27" }
chrono = { version = "0.4.41" }
colored = { version = "3.0.0" }
anyhow = { version = "1.0.98" }
cpal = { version = "0.16.0" }
vosk = { version = "0.3.1" }
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
serde_json = { version = "1.0.140" }
serde = { version = "1.0.219", features = ["derive"] }
config-neko = { path = "crates/config-neko" }
once_cell = "1.21.3"
nyannel = { path = "crates/nyannel" }

[dependencies]
log = { workspace = true }
logger = { path = "crates/logger" }
clap = { version = "4.5.41", features = ["derive"] }
serde_json = { workspace = true }
serde = { workspace = true }
config-neko = { workspace = true }
voice-recognizer = { path = "crates/voice-recognizer" }
tokio = { workspace = true }
colored = { workspace = true }
servx = { path = "crates/servx" }
tray-item = "0.10.0"
lazy_static = { version = "1.4.0" }
nyannel = { workspace = true }
toml = "0.9.2"
dotenvy = "0.15.7"

[build-dependencies]
embed-resource = { version = "3.0.5" }

[profile]

# [profile.release]
# opt-level = "z"     # Use "z" for smallest possible size (even more than "s")
# lto = true          # Enables Link Time Optimization
# codegen-units = 1   # Fewer codegen units = better optimization (at cost of compile time)
# panic = "abort"     # Removes unwinding code, reduces binary size
# strip = "symbols"   # Removes symbol table (requires Rust 1.71+)

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
